# kwindowsaddons

./: .reviewboardrc  CMakeLists.txt
config/: CMakeLists.txt  platform.desktop
kwinshutdown/: CMakeLists.txt  kwinshutdown.desktop
kwinstartmenu/: winstartmenu.desktop
